[gd_scene load_steps=15 format=3 uid="uid://ksfqtylcxqct"]

[ext_resource type="Script" uid="uid://duaxriartxdlj" path="res://game.gd" id="1_80nbo"]
[ext_resource type="Theme" uid="uid://chg4068yit3lm" path="res://theme.tres" id="2_e2o6t"]
[ext_resource type="Shader" uid="uid://di616exxulm5v" path="res://distort.gdshader" id="3_feb5d"]
[ext_resource type="Shader" uid="uid://c0rrqphd2o4u7" path="res://glitch.gdshader" id="4_fc0e3"]
[ext_resource type="AudioStream" uid="uid://cosghvna7ktt3" path="res://sfx/text_boop.wav" id="6_ryrav"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fc0e3"]
shader = ExtResource("3_feb5d")
shader_parameter/distortion_strength = 0.0
shader_parameter/chroma_strength = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2o6t"]
bg_color = Color(0.3193912, 0.5962103, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_feb5d"]
bg_color = Color(0.98039216, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7jktm"]
shader = ExtResource("4_fc0e3")
shader_parameter/shake_power = 0.225
shader_parameter/shake_rate = 0.0
shader_parameter/shake_speed = 5.615
shader_parameter/shake_block_size = 25.645
shader_parameter/shake_color_rate = 0.0400000019

[sub_resource type="Animation" id="Animation_7jktm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlitchRect:material:shader_parameter/shake_rate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/VBoxContainer/3Buttons:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ryrav"]
resource_name = "false_win"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fc0e3"]
resource_name = "glitch"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlitchRect:material:shader_parameter/shake_rate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.4665178, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_eow3j"]
resource_name = "true_win"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/3Buttons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.0666666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7jktm"]
_data = {
&"RESET": SubResource("Animation_7jktm"),
&"false_win": SubResource("Animation_ryrav"),
&"glitch": SubResource("Animation_fc0e3"),
&"true_win": SubResource("Animation_eow3j")
}

[node name="Root" type="SubViewportContainer"]
material = SubResource("ShaderMaterial_fc0e3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="Game" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_e2o6t")
script = ExtResource("1_80nbo")

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_e2o6t")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/Game/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_e2o6t")
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="SubViewport/Game/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TurnLabel" type="Label" parent="SubViewport/Game/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
text = "Turn 0"

[node name="HBoxContainer2" type="HBoxContainer" parent="SubViewport/Game/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e2o6t")

[node name="MethBar" type="ProgressBar" parent="SubViewport/Game/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2o6t")
theme_override_styles/background = SubResource("StyleBoxFlat_e2o6t")
theme_override_styles/fill = SubResource("StyleBoxFlat_feb5d")
value = 50.0
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/Game/MarginContainer/VBoxContainer/HBoxContainer2/MethBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_e2o6t")
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="MethLabel" type="Label" parent="SubViewport/Game/MarginContainer/VBoxContainer/HBoxContainer2/MethBar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_e2o6t")
text = "Meth"

[node name="WaterLabel" type="Label" parent="SubViewport/Game/MarginContainer/VBoxContainer/HBoxContainer2/MethBar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_e2o6t")
text = "Water"

[node name="ColorRect" type="MarginContainer" parent="SubViewport/Game/MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_e2o6t")
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="MessageLabel" type="Label" parent="SubViewport/Game/MarginContainer/VBoxContainer/ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(520, 0)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_e2o6t")
autowrap_mode = 3

[node name="3Buttons" type="HBoxContainer" parent="SubViewport/Game/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e2o6t")
alignment = 1

[node name="CopeButton" type="Button" parent="SubViewport/Game/MarginContainer/VBoxContainer/3Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150.63, 0)
layout_mode = 2
theme = ExtResource("2_e2o6t")
text = "Cope"

[node name="WaitButton" type="Button" parent="SubViewport/Game/MarginContainer/VBoxContainer/3Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150.63, 0)
layout_mode = 2
theme = ExtResource("2_e2o6t")
text = "Wait"

[node name="ReachButton" type="Button" parent="SubViewport/Game/MarginContainer/VBoxContainer/3Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150.63, 0)
layout_mode = 2
theme = ExtResource("2_e2o6t")
text = "Reach Out"

[node name="FadeRect" type="ColorRect" parent="SubViewport/Game"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GlitchRect" type="ColorRect" parent="SubViewport/Game"]
material = SubResource("ShaderMaterial_7jktm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewport/Game"]
libraries = {
&"": SubResource("AnimationLibrary_7jktm")
}

[node name="TextBoop" type="AudioStreamPlayer" parent="SubViewport/Game"]
unique_name_in_owner = true
stream = ExtResource("6_ryrav")
max_polyphony = 100

[connection signal="pressed" from="SubViewport/Game/MarginContainer/VBoxContainer/3Buttons/CopeButton" to="SubViewport/Game" method="_on_cope_button_pressed"]
[connection signal="pressed" from="SubViewport/Game/MarginContainer/VBoxContainer/3Buttons/WaitButton" to="SubViewport/Game" method="_on_wait_button_pressed"]
[connection signal="pressed" from="SubViewport/Game/MarginContainer/VBoxContainer/3Buttons/ReachButton" to="SubViewport/Game" method="_on_reach_button_pressed"]
